# camera_signalman

./: .gitignore  CMakeLists.txt  README.md  camera_signalman_nodelet.xml  package.xml
config/: ros.yaml
include/: Camera_signalman_node.h  Camera_signalman_nodelet.h
launch/: camera_signalman.launch  camera_signalman_nodelet.launch  camera_signalman_nodelet_with_3x_r200.launch  camera_signalman_nodelet_with_4x_r200.launch  camera_signalman_nodelet_with_cv_camera.launch
src/: Camera_signalman_node.cpp  Camera_signalman_nodelet.cpp  camera_signalman.cpp
