<?xml version="1.0"?>
<package format="2">
  <name>camera_signalman</name>
  <version>1.0.0</version>
  <description>A nodelet to dynamically reroute cameras image feed topics.</description>

  <maintainer email="technophil98@gmail.com">Philippe Rivest</maintainer>
  <maintainer email="info@elikos.polymtl.ca">Elikos</maintainer>

  <license>TODO</license>

  <url type="GitHub">https://github.com/elikos/camera_signalman</url>
  <url type="Website">http://elikos.polymtl.ca/</url>

  <author email="technophil98@gmail.com">Philippe Rivest</author>


  <!-- Dependencies -->
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>elikos_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <!-- Nodelet spec -->
    <nodelet plugin="${prefix}/camera_signalman_nodelet.xml"/>
  </export>
</package>
